--- a/frontend/src/components/common/MainNavBar.css
+++ b/frontend/src/components/common/MainNavBar.css
@@ -1,3 +1,31 @@
 #main-nav-bar {
-    display: flex;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 10%;
+  align-items: center;
+  background-color: bisque;
+}
+.logo {
+  width: 10%;
+  height: 10%;
+}
+.title {
+  font-size: 40px;
+}
+.nav-container {
+  display: flex;
+  width: 60%;
+  justify-content: space-between;
+}
+.left-nav {
+  display: flex;
+  width: 60%;
+}
+.right-nav {
+  display: flex;
+  width: 30%;
+}
+hr {
+  border: solid;
 }
