--- a/frontend/src/screens/kakaomap/KakaoMap.css
+++ b/frontend/src/screens/kakaomap/KakaoMap.css
@@ -1,6 +1,6 @@
 .map {
     width: 100%;
-    height: 600px;
+    height: 100vh;
     align-items: center;
     justify-content: center;
     margin-left: auto;
@@ -8,4 +8,5 @@
     border-style: solid;
     border-width: medium;
     border-color: #D8D8D8;
+    flex-grow: 1;
 }
