--- a/frontend/src/screens/analysis/Analysis.css
+++ b/frontend/src/screens/analysis/Analysis.css
@@ -1,16 +1,18 @@
 .analysis_wrap {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: row;
 }
 
 .menu_wrap {
-  position: absolute;
-  z-index: 1;
   top: 0px;
   left: 0px;
   bottom: 0px;
 
-  width: 350px;
+  width: 30%;
+  min-width: 350px;
+  height: 100%;
   background: rgba(255, 255, 255, 1);
   border-radius: 15px;
   margin: 15px 10px;
@@ -19,6 +21,11 @@
   flex-direction: column;
   align-items: center;
   overflow-y: scroll;
+}
+
+.map_wrap {
+  width: 70%;
+  height: 100%;
 }
 
 .search_textinput_wrap {
@@ -104,8 +111,6 @@
 }
 
 #search_button {
-  position: absolute;
-  bottom: 20px;
-
+  margin-top: 10px;
   width: 90%;
 }
