--- a/frontend/src/screens/analysis/Analysis.css
+++ b/frontend/src/screens/analysis/Analysis.css
@@ -80,6 +80,10 @@
   margin: 20px 0px;
   background-color: skyblue;
   border-radius: 15px;
+
+  display: flex;
+  flex-direction: column;
+  overflow: scroll;
 }
 
 .price_wrap {
@@ -113,4 +117,17 @@
 #search_button {
   margin-top: 10px;
   width: 90%;
+}
+
+.item_wrap {
+  width: 100%;
+  height: 140px;
+  margin: 10px 0px;
+
+  border: 3px solid rgba(0, 0, 0, 1);
+}
+
+.item_wrap:hover {
+  background: white;
+  cursor: pointer;
 }
