--- a/frontend/src/screens/analysis/Analysis.css
+++ b/frontend/src/screens/analysis/Analysis.css
@@ -1,49 +1,19 @@
 .analysis_wrap {
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: row;
 }
 
 .map_wrap {
-  width: 70%;
-  height: 100%;
-}
-
-.open_sidebar_button {
-  width: 30px;
-  height: 60px;
-  background: rgb(255, 255, 255, 1);
-  border-radius: 0px 10px 10px 0px;
-
-  position: absolute;
-  top: 50%;
-  left: 0;
-  z-index: 2;
-
-  cursor: pointer;
-}
-
-.sidebar_button:hover {
-  background: rgb(211, 211, 211, 1);
-}
-
-.sidebar_button img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
 }
 
-.sideBar_wrap {
-  width: 400px;
-  height: 100%;
-  background: rgb(255, 255, 255, 1);
-
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+.sidebar_wrap {
   position: absolute;
+  z-index: 2;
   top: 0;
   left: 0;
-  z-index: 2;
+
+  width: 360px;
+  height: 100%;
 }
