--- a/frontend/src/components/BrandCard.css
+++ b/frontend/src/components/BrandCard.css
@@ -1,9 +1,51 @@
-.ranking-banner__img {
-  width: 100%;
-  height: 300px;
+#brand-card {
+  margin-top: 40px;
 }
 
 .card-list {
-  width: 60%;
+  width: 80%;
   margin: auto;
+}
+
+.card-left {
+  display: flex;
+  padding: 8px;
+}
+
+.card {
+  display: flex;
+}
+
+.card__img-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  width: 100px;
+  height: 100px;
+  z-index: 2;
+}
+
+.card__img {
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+.card__num {
+  font-size: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 40px;
+  margin-left: 12px;
+}
+
+.card-right {
+  padding: 12px;
+  margin-left: 12px;
+}
+
+.card__name {
+  font-size: 20px;
 }
