--- a/frontend/src/screens/analysis/FindPlace.css
+++ b/frontend/src/screens/analysis/FindPlace.css
@@ -1,63 +1,90 @@
 .option_wrap {
-  font-family: sans-serif;
-  background: #ffbb63;
-  color: white;
-  width: 100%;
-  height: 400px;
-  box-sizing: border-box;
-}
-
-.react-tabs {
-  display: flex;
-  width: 200px;
-  height: 400px;
-  border: 1px solid #3c3e43;
-  color: white;
-  background: #FFF;
-}
-
-.react-tabs__tab-list {
   display: flex;
   flex-direction: column;
-  width: 200px;
-  color: white;
-  background: blue;
+  align-items: center;
 
-  padding-left: 0;
-  margin-bottom: 0;
+  width: 100%;
+  height: 100%;
+  margin-top: 20px;
 }
 
-.react-tabs__tab {
-  height: 70px;
-  list-style: none;
-  cursor: pointer;
-  color: #bbb;
+.button_group_wrap {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+
+  width: 100%;
+  height: 50px;
 }
 
-.react-tabs__tab--selected {
-  background: yellow;
-  border-color: #1c1d1f;
-  border-left: 4px solid #6eb800;
-  color: black;
-}
+.start_search_button {
+  width: 87%;
+  height: 50px;
+  background: rgb(0, 0, 0, 1);
+  border: 2px solid rgb(0, 0, 0, 0.3);
+  border-radius: 10px;
+  padding: 5px 10px;
+  margin-top: 20px;
 
-.react-tabs__tab-panel {
-  display: none;
-  width: 100px;
-}
-
-.react-tabs__tab-panel--selected {
-  display: block;
-}
-
-.react-tabs__tab {
-  padding-left: 24px;
-}
-
-.react-tabs__tab--selected {
-  padding-left: 21px;
-}
-
-.panel-content {
+  color: rgb(255, 255, 255, 1);
   text-align: center;
+
+  cursor: pointer;
+}
+
+.button {
+  background: rgb(255, 255, 255, 1);
+  border: 2px solid rgb(0, 0, 0, 0.3);
+  border-radius: 10px;
+  padding: 5px 10px;
+
+  color: rgb(0, 0, 0, 0.5);
+  text-align: center;
+
+  cursor: pointer;
+}
+
+.button:hover {
+  background: rgb(233, 233, 233, 1);
+  border: 2px solid rgb(0, 0, 0, 1);
+  color: rgb(0, 0, 0, 1);
+}
+
+.button-active {
+  background: rgb(0, 0, 0, 1);
+  border: 2px solid rgb(0, 0, 0, 1);
+  border-radius: 10px;
+  padding: 10px 15px;
+
+  color: rgb(255, 255, 255, 1);
+  text-align: center;
+
+  cursor: pointer;
+}
+
+.sector_options_wrap {
+  width: 100%;
+  margin-top: 20px;
+
+  display: flex;
+  justify-content: center;
+}
+
+.price_options_wrap {
+  width: 92%;
+  margin-top: 20px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.floor_options_wrap {
+  width: 92%;
+  margin-top: 20px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
