--- a/frontend/src/screens/Main.css
+++ b/frontend/src/screens/Main.css
@@ -1,13 +1,13 @@
 #main {
-  /* height: 100vh;
-  overflow: hidden !important; */
+  height: 100vh;
+  overflow: hidden !important;
 }
 .trans-left-img {
   position: absolute;
   top: 0;
   width: 60vw;
   object-position: 50% 50%;
-  height: 150vh;
+  height: 100vh;
   object-fit: cover;
   pointer-events: none;
   opacity: 0;
@@ -32,7 +32,7 @@
   top: 0;
   width: 60vw;
   object-position: 50% 50%;
-  height: 150vh;
+  height: 100vh;
   object-fit: cover;
   pointer-events: none;
   opacity: 0;
@@ -54,15 +54,15 @@
 
 .trans-clip {
   position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	z-index: 9999;
-	pointer-events: none;
-	background: radial-gradient(circle at center, transparent 1%, #103a3a 0);
-	background-size: 12000% 12000%;
-	background-position: 50% 50%
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  pointer-events: none;
+  background: radial-gradient(circle at center, transparent 1%, #103a3a 0);
+  background-size: 12000% 12000%;
+  background-position: 50% 50%;
 }
 
 .trans-clip-mask {
@@ -109,12 +109,20 @@
   height: 10vw;
 }
 
+/* transform: rotate(720deg); */
+
+.header__head-circle.--active {
+  transform: translate(-50%, -200%);
+  transition: all 1s ease;
+}
+
 .header__head-circle {
   position: absolute;
-  top: 50%;
+  top: 70%;
   left: 50%;
   transform: translate(-50%, -50%);
   opacity: 1;
+  transition: 1s;
 }
 
 .header__head-circle-in {
@@ -124,7 +132,8 @@
   height: 14vw;
   position: relative;
   cursor: pointer;
-  transition: all .5s ease;
+  transition: all 0.5s ease;
+  border: 4px solid #ffa07a;
 }
 
 .head-circle-logo {
@@ -146,11 +155,11 @@
 .main-ground.--active .ground-right,
 .main-ground.--active .ground-right:hover {
   width: 25vw;
-  flex: 0 0 25vw
+  flex: 0 0 30vw;
 }
 
 .main-ground.--active .middle-menu {
-  width: 50vw;
+  width: 0vw;
 }
 
 .ground-left {
@@ -161,14 +170,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: all 1s ease;
+  transition: all 2s ease;
   flex: 0 1 50vw;
 }
 
 .ground-left:hover,
 .ground-right:hover {
   width: 60vw;
-  flex: 0 0 60vw
+  flex: 0 0 60vw;
 }
 
 .ground-left__img-wrapper {
@@ -209,7 +218,103 @@
   position: relative;
   z-index: 3;
   overflow: hidden;
-  transition: all 1s ease;
+  transition: all 3s ease;
+  display: flex;
+  animation: fadeout 2s;
+}
+
+.middle-menu.--active {
+  animation: fadein 5s;
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeout {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+.middle-menu__analysis {
+  position: absolute;
+  top: 30%;
+  left: 0.5vw;
+  width: 12vw;
+  height: 4vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ff6347;
+}
+
+.middle-menu__ranking {
+  position: absolute;
+  top: 50%;
+  right: 0.5vw;
+  width: 12vw;
+  height: 4vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ff7f50;
+}
+
+.middle-menu__analysis-title,
+.middle-menu__ranking-title {
+  display: flex;
+  font-size: 32px;
+  color: azure;
+  font-weight: bold;
+}
+
+.middle-menu__analysis-description {
+  position: absolute;
+  top: 44%;
+  left: 0.5vw;
+  color: #ff6347;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.middle-menu__ranking-description {
+  position: absolute;
+  top: 64%;
+  right: 0.5vw;
+  color: #ff7f50;
+}
+
+.middle-menu__user {
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  font-weight: bold;
+}
+
+.middle-menu__user-login {
+  margin-right: 40px;
+}
+
+.middle-menu__user-login__link,
+.middle-menu__user-join__link {
+  color: #ff7f50;
+  text-decoration: none;
+}
+
+.middle-menu__user-login__link:hover,
+.middle-menu__user-join__link:hover {
+  color: #8b0000;
 }
 
 .ground-right {
@@ -219,8 +324,9 @@
   overflow: hidden;
   display: flex;
   justify-content: center;
-  transition: all 1s ease;
+  transition: all 2s ease;
   flex: 0 1 50vw;
+  align-items: center;
 }
 
 .main-container .middle-menu {
@@ -249,4 +355,34 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.ground-left__title {
+  z-index: 5;
+  position: absolute;
+  top: 15%;
+}
+.ground-right__title {
+  z-index: 5;
+  position: absolute;
+  bottom: 15%;
+}
+
+.ground-left__title > h1,
+.ground-right__title > h1 {
+  font-size: 6vw;
+  color: aliceblue;
+  font-weight: bold;
+}
+
+.ground-right__admin {
+  z-index: 5;
+  position: absolute;
+  top: 1vw;
+  right: 1vw;
+}
+
+.ground-right__admin > h4 {
+  font-size: 2vw;
+  color: aliceblue;
 }
