--- a/frontend/src/screens/analysis/FindPlace.css
+++ b/frontend/src/screens/analysis/FindPlace.css
@@ -37,9 +37,10 @@
   background: rgb(255, 255, 255, 1);
   border: 2px solid rgb(0, 0, 0, 0.3);
   border-radius: 10px;
-  padding: 5px 10px;
+  padding: 2px 5px;
 
   color: rgb(0, 0, 0, 0.5);
+  font-size: 15px;
   text-align: center;
 
   cursor: pointer;
@@ -55,9 +56,10 @@
   background: rgb(0, 0, 0, 1);
   border: 2px solid rgb(0, 0, 0, 1);
   border-radius: 10px;
-  padding: 10px 15px;
+  padding: 4px 6px;
 
   color: rgb(255, 255, 255, 1);
+  font-size: 17px;
   text-align: center;
 
   cursor: pointer;
@@ -87,4 +89,26 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.items_list_wrap {
+  width: 92%;
+  height: 400px;
+  max-height: 400px;
+  margin-top: 20px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  overflow: scroll;
+}
+
+.items_wrap {
+  width: 100%;
+  height: 100%;
+}
+
+.item_wrap {
+  border: 1px solid rgb(0, 0, 0, 1);
 }
