--- a/frontend/src/screens/SignIn.css
+++ b/frontend/src/screens/SignIn.css
@@ -4,7 +4,32 @@
   box-sizing: border-box;
 }
 
+.login-div {
+  width: 100vw;
+  min-width: 500px;
+  height: 100vh;
+  min-height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 0 0 0;
+  font-family: 'Montserrat', sans-serif;
+  flex-direction: column;
+}
 
+#loginform {
+  justify-content: center;
+  align-items: center;
+}
+
+#logintitle {
+  font-weight: bold;
+  font-size: large;
+  margin: 0;
+
+}
+
+/* 
 #login-div {
   width: 100vw;
   min-width: 500px;
@@ -15,9 +40,9 @@
   align-items: center;
   margin: 0 0 0 0;
   font-family: 'Montserrat', sans-serif;
-}
+} */
 
-h1 {
+/* h1 {
   font-weight: bold;
   margin: 0;
 }
@@ -264,4 +289,4 @@ footer i {
 footer a {
   color: #3c97bf;
   text-decoration: none;
-}
+} */
