fix: mainpage 반응형, rankingpage design edit

--- a/frontend/src/screens/Main.css
+++ b/frontend/src/screens/Main.css
@@ -273,7 +273,7 @@
 .middle-menu__analysis-title,
 .middle-menu__ranking-title {
   /* display: flex; */
-  font-size: 32px;
+  font-size: 2vw;
   color: azure;
   font-weight: bold;
 }
