--- a/frontend/src/components/BrandCard.css
+++ b/frontend/src/components/BrandCard.css
@@ -7,45 +7,42 @@
   margin: auto;
 }
 
-.card-left {
+.card {
   display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: auto;
   padding: 8px;
 }
 
-.card {
+.card__num {
   display: flex;
+  font-size: 16px;
+  margin-right: 12px;
+  margin-left: 12px;
 }
 
 .card__img-wrapper {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: auto;
-  width: 100px;
-  height: 100px;
-  z-index: 2;
+  width: 80px;
+  height: 80px;
+  margin-right: 24px;
 }
 
 .card__img {
   width: 100%;
   height: 100%;
-  z-index: 1;
-}
-
-.card__num {
-  font-size: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-right: 40px;
-  margin-left: 12px;
 }
 
 .card-right {
-  padding: 12px;
-  margin-left: 12px;
+  display: block;
 }
 
 .card__name {
-  font-size: 20px;
+  font-size: 16px;
+  margin-bottom: 12px;
+}
+
+.card__cnt {
+  font-size: 12px;
 }
