--- a/frontend/src/screens/analysis/FindPlace.css
+++ b/frontend/src/screens/analysis/FindPlace.css
@@ -111,4 +111,7 @@
 
 .item_wrap {
   border: 1px solid rgb(0, 0, 0, 1);
+  border-radius: 15px;
+  background-color: rgb(233, 233, 233, 1);
+  margin: 10px 0px;
 }
