--- a/frontend/src/screens/analysis/FindPlace.css
+++ b/frontend/src/screens/analysis/FindPlace.css
@@ -10,12 +10,29 @@
 
 .button_group_wrap {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+
+  width: 100%;
+  height: 70px;
+}
+
+.button_layer_wrap {
+  display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
 
   width: 100%;
-  height: 50px;
+  height: 35px;
+}
+
+.button_layer_wrap button {
+  width: 50%;
+  height: 100%;
+
+  margin: 0px 2% 0px 2%;
 }
 
 .start_search_button {
