--- a/frontend/src/screens/Main.css
+++ b/frontend/src/screens/Main.css
@@ -161,11 +161,11 @@
 .main-ground.--active .ground-right,
 .main-ground.--active .ground-right:hover {
   width: 25vw;
-  flex: 0 0 30vw;
+  flex: 0 0 32vw;
 }
 
 .main-ground.--active .middle-menu {
-  width: 0vw;
+  /* width: 0vw; */
 }
 
 .ground-left {
@@ -318,12 +318,16 @@
   color: aliceblue;
   text-decoration: none;
   font-size: 24px;
+  transition: all 1s ease;
   /* font-weight: bold; */
 }
 
 .middle-menu__user-login__link:hover,
 .middle-menu__user-join__link:hover {
-  color: grey;
+  font-size: 28px;
+  color: aliceblue;
+  transform: translate(-50%, -50%);
+  transition: all 1s ease;
 }
 
 .ground-right {
@@ -336,6 +340,12 @@
   transition: all 2s ease;
   flex: 0 1 50vw;
   align-items: center;
+}
+
+.ground-right.--active {
+  width: 1000px;
+  z-index: 111;
+  filter: brightness(0%);
 }
 
 .main-container .middle-menu {
