--- a/frontend/src/screens/analysis/FindPlace.css
+++ b/frontend/src/screens/analysis/FindPlace.css
@@ -15,7 +15,7 @@
   justify-content: space-evenly;
 
   width: 100%;
-  height: 70px;
+  height: 120px;
 }
 
 .button_layer_wrap {
@@ -25,14 +25,14 @@
   justify-content: space-evenly;
 
   width: 100%;
-  height: 35px;
+  height: 60px;
 }
 
 .button_layer_wrap button {
-  width: 50%;
-  height: 100%;
+  width: 44%;
+  height: 80%;
 
-  margin: 0px 2% 0px 2%;
+  margin: 5px 5px;
 }
 
 .start_search_button {
@@ -51,13 +51,14 @@
 }
 
 .button {
-  background: rgb(255, 255, 255, 1);
-  border: 2px solid rgb(0, 0, 0, 0.3);
+  background: rgb(251, 216, 175, 1);
+  border: 2px solid rgb(251, 216, 175, 0.3);
   border-radius: 10px;
   padding: 2px 5px;
 
   color: rgb(0, 0, 0, 0.5);
   font-size: 15px;
+  font-weight: bold;
   text-align: center;
 
   cursor: pointer;
@@ -70,8 +71,8 @@
 }
 
 .button-active {
-  background: rgb(0, 0, 0, 1);
-  border: 2px solid rgb(0, 0, 0, 1);
+  background: rgb(212, 171, 116, 1);
+  border: 2px solid rgb(212, 171, 116, 1);
   border-radius: 10px;
   padding: 4px 6px;
 
@@ -131,4 +132,16 @@
   border-radius: 15px;
   background-color: rgb(233, 233, 233, 1);
   margin: 10px 0px;
+}
+
+.css-wb57ya-MuiFormControl-root-MuiTextField-root {
+  background: white;
+}
+
+.MuiOutlinedInput-notchedOutline {
+  border: 2px solid red;
+}
+
+.MuiOutlinedInput-notchedOutline.css-1d3z3hw-MuiOutlinedInput-notchedOutline {
+  border-color: red;
 }
