--- a/frontend/src/screens/analysis/SideBar.css
+++ b/frontend/src/screens/analysis/SideBar.css
@@ -19,11 +19,23 @@
   padding: 20px 0px;
 }
 
+.logo_img {
+  width: 50px;
+  height: 50px;
+  margin-right: 80%;
+  margin-bottom: 20px;
+
+  object-fit: contain;
+
+  cursor: pointer;
+}
+
 .sidebar_button {
   width: 30px;
   height: 60px;
   background: rgb(255, 255, 255, 1);
   border-radius: 0px 10px 10px 0px;
+  margin-top: 20px;
 
   cursor: pointer;
 }
@@ -36,6 +48,12 @@
   width: 100%;
   height: 100%;
   object-fit: contain;
+}
+
+.start_search_button {
+  width: 92%;
+  background: rgb(184, 146, 101, 1);
+  border: 1px solid rgb(184, 146, 101, 1);
 }
 
 @keyframes vibration {
