--- a/frontend/src/screens/analysis/FindPlace.css
+++ b/frontend/src/screens/analysis/FindPlace.css
@@ -111,8 +111,8 @@
 
 .items_list_wrap {
   width: 92%;
-  height: 47vh;
-  margin-top: 20px;
+  height: 35vh;
+  margin-top: 10px;
 
   display: flex;
   flex-direction: column;
@@ -166,8 +166,6 @@
   margin-top: 30px;
 }
 
-
-
 .item_wrap #mainTitle {
   color: black;
   font-size: 16px;
@@ -196,6 +194,142 @@
   width: 50px;
   height: 100px;
   background: rgb(255, 255, 255);
+}
+
+.item_detail_wrap {
+  width: 300px;
+  height: 600px;
+  background: rgb(255, 255, 255, 1);
+  /* background: rgb(255, 246, 236, 1); */
+  border-radius: 15px;
+
+  position: absolute;
+  top: 0;
+  left: 340px;
+
+  overflow: scroll;
+}
+
+.close_button_img {
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+
+  object-fit: contain;
+  cursor: pointer;
+
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.close_button_img:hover {
+  background-color: rgb(233, 233, 233, 1);
+}
+
+.title_wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  margin-top: 20px;
+  margin-left: 10px;
+}
+
+.title_wrap #price {
+  color: rgb(105, 165, 219, 1);
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.near_station_wrap {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.near_station_wrap img {
+  width: 20px;
+  height: 20px;
+  margin: 0px 3px;
+
+  object-fit: contain;
+}
+
+.near_station_wrap #station {
+  color: black;
+  font-size: 13px;
+  font-weight: lighter;
+}
+
+.title_img {
+  width: 70px;
+  height: 70px;
+  object-fit: contain;
+}
+
+.item_intro_wrap {
+  width: 100%;
+  height: 100px;
+  margin-top: 30px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.building_type_wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.building_img_wrap {
+  width: 60px;
+  height: 50px;
+  object-fit: contain;
+  margin: 5px;
+}
+
+.building_type_wrap #title {
+  color: black;
+  font-size: 12px;
+  font-weight: 500;
+}
+
+.building_type_wrap #data {
+  color: black;
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.detail_border_wrap {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.detail_border_wrap hr {
+  width: 95%;
+}
+
+.detail_feature_wrap {
+  color: black;
+  font-size: 16px;
+  margin: 0px 10px;
+  font-weight: 500;
+}
+
+.chart_wrap {
+  width: 100%;
+
+  display: flex;
+  justify-content: center;
 }
 
 .css-wb57ya-MuiFormControl-root-MuiTextField-root {
