--- a/frontend/src/screens/analysis/FindPlace.css
+++ b/frontend/src/screens/analysis/FindPlace.css
@@ -207,7 +207,8 @@
   top: 0;
   left: 340px;
 
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .close_button_img {
@@ -325,11 +326,100 @@
   font-weight: 500;
 }
 
+.chart_title {
+  width: 100%;
+  font-size: 15px;
+  font-weight: 700;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  position: relative;
+  top: 10px;
+  z-index: 2;
+}
+
+.chart_title .person_img {
+  width: 20px;
+  height: 20px;
+
+  object-fit: contain;
+  margin: 0px;
+}
+
 .chart_wrap {
   width: 100%;
 
   display: flex;
+  flex-direction: row;
   justify-content: center;
+  align-items: center;
+
+  position: relative;
+  left: 3px;
+}
+
+.chart_perhour_wrap {
+  width: 100%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  position: relative;
+  bottom: 30px;
+}
+
+.perhour_title {
+  position: relative;
+  z-index: 2;
+  font-weight: 700;
+  top: 35px;
+}
+
+.daydata_wrap {
+  position: relative;
+  top: 0;
+  right: 50px;
+}
+
+.daydata_wrap li {
+  color: black;
+  font-size: 11px;
+
+  width: 100px;
+  margin: 2px 0px;
+}
+
+.detail_icon_wrap {
+  width: 100%;
+  height: 30px;
+  padding-right: 15px;
+  padding-top: 10px;
+
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.bookmark_wrap {
+  border-radius: 100%;
+  margin: 0px 5px;
+  cursor: pointer;
+}
+
+.link_wrap {
+  border-radius: 100%;
+  margin: 0px 5px;
+  cursor: pointer;
+}
+
+.link_wrap:hover {
+  background-color: rgb(211, 211, 211, 1);
 }
 
 .css-wb57ya-MuiFormControl-root-MuiTextField-root {
