--- a/frontend/src/screens/RankingDetail.css
+++ b/frontend/src/screens/RankingDetail.css
@@ -1,6 +1,6 @@
 #rankingdetail {
   width: 100vw;
-  height: 280vh;
+  /* height: 280vh; */
   background-color: aliceblue;
   position: relative;
   /* overflow: hidden; */
@@ -18,6 +18,27 @@
   align-items: center;
 }
 
+.header__circle-in {
+  border-radius: 50%;
+  background-color: white;
+  width: 10vw;
+  height: 10vw;
+  position: relative;
+  cursor: pointer;
+  transition: all 0.5s ease;
+  border: 4px solid #ffa07a;
+  position: relative;
+  margin-top: -5vw;
+  margin-right: 5vw;
+}
+
+.circle-logo {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 1vw;
+}
+
 .img-wrapper > img {
   width: 20vw;
 }
@@ -33,12 +54,12 @@
 }
 
 .rankingdetail-container > hr {
-  margin-bottom: 120px;
+  margin-bottom: 80px;
 }
 
 .rankingdetail-body {
   width: 80%;
-  height: 100%;
+  /* height: 100%; */
   margin: auto;
 }
 
