--- a/frontend/src/screens/analysis/FindPlace.css
+++ b/frontend/src/screens/analysis/FindPlace.css
@@ -28,6 +28,16 @@
   height: 60px;
 }
 
+.show_item_button_layer_wrap {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+
+  width: 100%;
+  height: 60px;
+}
+
 .button_layer_wrap button {
   width: 44%;
   height: 80%;
@@ -35,19 +45,11 @@
   margin: 5px 5px;
 }
 
-.start_search_button {
-  width: 87%;
-  height: 50px;
-  background: rgb(0, 0, 0, 1);
-  border: 2px solid rgb(0, 0, 0, 0.3);
-  border-radius: 10px;
-  padding: 5px 10px;
-  margin-top: 20px;
+.show_item_button_layer_wrap button {
+  width: 94%;
+  height: 80%;
 
-  color: rgb(255, 255, 255, 1);
-  text-align: center;
-
-  cursor: pointer;
+  margin: 5px 5px;
 }
 
 .button {
@@ -93,11 +95,14 @@
 
 .price_options_wrap {
   width: 92%;
+  height: 200px;
   margin-top: 20px;
 
   display: flex;
   flex-direction: column;
   justify-content: center;
+
+  overflow-y: scroll;
 }
 
 .floor_options_wrap {
@@ -406,13 +411,13 @@
   justify-content: flex-start;
 }
 
-.bookmark_wrap {
+.bookmark_icon_wrap {
   border-radius: 100%;
   margin: 0px 5px;
   cursor: pointer;
 }
 
-.link_wrap {
+.link_icon_wrap {
   border-radius: 100%;
   margin: 0px 5px;
   cursor: pointer;
