--- a/frontend/src/screens/analysis/SideBar.css
+++ b/frontend/src/screens/analysis/SideBar.css
@@ -8,6 +8,18 @@
   height: 100%;
 }
 
+.search_input_options_wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  width: 92%;
+  background-color: #DBB999;
+  border-radius: 15px;
+  padding: 10px 0px;
+}
+
 .search_wrap {
   width: 330px;
   height: 100%;
@@ -50,10 +62,23 @@
   object-fit: contain;
 }
 
+.sector_option_wrap {
+  margin-top: 15px;
+}
+
 .start_search_button {
   width: 92%;
+  height: 50px;
   background: rgb(184, 146, 101, 1);
   border: 1px solid rgb(184, 146, 101, 1);
+  border-radius: 10px;
+  padding: 5px 10px;
+  margin-top: 20px;
+
+  color: rgb(255, 255, 255, 1);
+  text-align: center;
+
+  cursor: pointer;
 }
 
 @keyframes vibration {
