--- a/frontend/src/screens/Main.css
+++ b/frontend/src/screens/Main.css
@@ -141,6 +141,12 @@
   cursor: pointer;
   transition: all 0.5s ease;
   border: 4px solid #ffa07a;
+  opacity: 0.9;
+}
+
+.header__head-circle-in:hover {
+  opacity: 0.7;
+  transform: scale(120%);
 }
 
 .head-circle-logo {
@@ -319,7 +325,8 @@
 
 .middle-menu__user-login__link,
 .middle-menu__user-join__link,
-.middle-menu__user-logout__link {
+.middle-menu__user-logout__link,
+.middle-menu__user-mypage__link {
   color: aliceblue;
   text-decoration: none;
   font-size: 24px;
@@ -329,14 +336,13 @@
 
 .middle-menu__user-login__link:hover,
 .middle-menu__user-join__link:hover,
-.middle-menu__user-logout__link:hover {
+.middle-menu__user-logout__link:hover,
+.middle-menu__user-mypage__link:hover {
   font-size: 28px;
   color: aliceblue;
   transform: translate(-50%, -50%);
   transition: all 1s ease;
 }
-
-
 
 .ground-right {
   width: 50vw;
@@ -397,8 +403,8 @@
   top: 35%;
 }
 
-.ground-left__title>h1,
-.ground-right__title>h1 {
+.ground-left__title > h1,
+.ground-right__title > h1 {
   font-size: 6vw;
   color: aliceblue;
   font-weight: bold;
@@ -412,7 +418,7 @@
   display: flex;
 }
 
-.middle-menu__user>h4 {
+.middle-menu__user > h4 {
   font-size: 2vw;
   font-weight: bold;
   color: #8b0000;
