--- a/frontend/src/screens/NotFound.css
+++ b/frontend/src/screens/NotFound.css
@@ -13,8 +13,17 @@
   transform: translate(-50%, -50%);
 }
 
+.notfound-logo > img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
+
 .notfound-logo > p {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-weight: bold;
+  font-size: 24px;
 }
