--- a/frontend/src/screens/MyPage.css
+++ b/frontend/src/screens/MyPage.css
@@ -1,15 +1,28 @@
-.page-wrapper {
-  border: 1px solid grey;
-  border-radius: 12px;
-  width: 70%;
-  height: 400px;
-  margin: auto;
-}
-.category-btn {
+.mypage-banner {
+  width: 100%;
+  height: 50vh;
+  overflow: hidden;
   display: flex;
-  justify-content: center;
+  position: relative;
 }
 
-.v-line {
-  border: 1px;
+.mypage-banner > img {
+  width: 100%;
+}
+
+.mypage-title > h2 {
+  position: absolute;
+  top: 50px;
+  left: 200px;
+  font-size: 6vw;
+  color: aliceblue;
+  font-weight: bold;
+  z-index: 2;
+}
+
+.mypage-container {
+  width: 70%;
+  height: 100vh;
+  margin: auto;
+  margin-top: 2vw;
 }
