--- a/frontend/src/screens/MyPage.css
+++ b/frontend/src/screens/MyPage.css
@@ -1,3 +1,8 @@
+#my-page {
+  display: flex;
+  justify-content: center;
+}
+
 .mypage-banner {
   width: 100%;
   height: 50vh;
@@ -22,7 +27,10 @@
 
 .mypage-container {
   width: 70%;
-  height: 100vh;
+  height: 60vw;
+  position: absolute;
   margin: auto;
-  margin-top: 2vw;
+  top: 35%;
+  background-color: aliceblue;
+  z-index: 3;
 }
