--- a/frontend/src/screens/analysis/BookMarkPlace.css
+++ b/frontend/src/screens/analysis/BookMarkPlace.css
@@ -1,11 +1,15 @@
 .bookmark_wrap {
   width: 100%;
-  height: 400px;
+  height: 45vh;
+  max-height: 350px;
+  margin-top: 10px;
 
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 .need_login_page_wrap {
