--- a/frontend/src/screens/analysis/FindPlace.css
+++ b/frontend/src/screens/analysis/FindPlace.css
@@ -116,7 +116,8 @@
 
 .items_list_wrap {
   width: 92%;
-  height: 35vh;
+  height: 30vh;
+  max-height: 200px;
   margin-top: 10px;
 
   display: flex;
@@ -203,13 +204,14 @@
 
 .item_detail_wrap {
   width: 300px;
-  height: 600px;
-  background: rgb(255, 255, 255, 1);
+  height: 98%;
+  background: #FFFFFF;
   /* background: rgb(255, 246, 236, 1); */
   border-radius: 15px;
+  margin: 1% 0px;
 
   position: absolute;
-  top: 0;
+  top: 0px;
   left: 340px;
 
   overflow-y: scroll;
@@ -415,12 +417,63 @@
   border-radius: 100%;
   margin: 0px 5px;
   cursor: pointer;
+  padding: 3px;
+}
+
+.bookmark_icon_wrap:hover {
+  background-color: rgb(211, 211, 211, 0.5);
 }
 
 .link_icon_wrap {
   border-radius: 100%;
   margin: 0px 5px;
   cursor: pointer;
+  padding: 3px;
+}
+
+.link_icon_wrap:hover {
+  background-color: rgb(211, 211, 211, 0.5);
+}
+
+.item_score_wrap {
+  width: 100%;
+  height: 250px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.item_score_main_title {
+  color: black;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.all_score_wrap {
+  width: 92%;
+  background-color: rgb(251, 216, 175, 0.5);
+  border-radius: 20px;
+}
+
+.compete_score_wrap .sub_title {
+  width: 100px;
+  color: black;
+  font-size: 13px;
+  font-weight: 600;
+}
+
+.compete_score_wrap {
+  width: 100%;
+  height: 30px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin: 20px 0px;
+  padding: 0px 20px;
 }
 
 .link_wrap:hover {
