--- a/frontend/src/screens/analysis/SideBar.css
+++ b/frontend/src/screens/analysis/SideBar.css
@@ -23,7 +23,7 @@
 .search_wrap {
   width: 330px;
   height: 100%;
-  background: rgb(255, 255, 255, 1);
+  background: #FEFEFB;
 
   display: flex;
   flex-direction: column;
@@ -62,8 +62,11 @@
   object-fit: contain;
 }
 
-.sector_option_wrap {
-  margin-top: 15px;
+.MuiFormControl-root label {
+  width: 100px;
+  text-align: center;
+  background-color: rgb(255, 255, 255, 1);
+  border-radius: 20px;
 }
 
 .start_search_button {
