--- a/frontend/src/screens/analysis/SideBar.css
+++ b/frontend/src/screens/analysis/SideBar.css
@@ -32,10 +32,9 @@
 }
 
 .logo_img {
-  width: 50px;
-  height: 50px;
-  margin-right: 80%;
-  margin-bottom: 20px;
+  width: 300px;
+  height: 60px;
+  margin-right: 20%;
 
   object-fit: contain;
 
@@ -62,7 +61,7 @@
   object-fit: contain;
 }
 
-.MuiFormControl-root label {
+.search_input_options_wrap label {
   width: 100px;
   text-align: center;
   background-color: rgb(255, 255, 255, 1);
