--- a/frontend/src/routers/Router.css
+++ b/frontend/src/routers/Router.css
@@ -1,3 +1,7 @@
+.router {
+  font-family: 'andong';
+}
+
 .transition-group {
   position: relative;
 }
@@ -7,6 +11,7 @@
   opacity: 0.5;
   transform: translate3d(100%, 0, 0);
 }
+
 .sidefade-enter-active {
   opacity: 1;
   transform: translate3d(0, 0, 0);
@@ -22,4 +27,9 @@
   opacity: 1;
   transform: translateX(-100%);
   transition: all 1s ease-in;
+}
+
+@font-face {
+  font-family: "andong";
+  src: url("../assets/font/Katuri.ttf");
 }
