--- a/frontend/src/components/BrandCard.css
+++ b/frontend/src/components/BrandCard.css
@@ -3,7 +3,7 @@
 }
 
 .card-list {
-  width: 80%;
+  width: 100%;
   margin: auto;
 }
 
@@ -17,13 +17,14 @@
   align-items: center;
   margin: auto;
   padding: 8px;
+  margin-top: 0.5vw;
 }
 
 .card__num {
   display: flex;
-  font-size: 16px;
-  margin-right: 12px;
-  margin-left: 12px;
+  font-size: 32px;
+  margin-right: 20px;
+  margin-left: 16px;
 }
 
 .card__img-wrapper {
@@ -39,14 +40,16 @@
 }
 
 .card-right {
-  display: block;
+  /* display: flex; */
+  align-items: center;
 }
 
 .card__name {
-  font-size: 16px;
-  margin-bottom: 12px;
+  font-size: 24px;
+  /* margin-bottom: 12px; */
 }
 
 .card__cnt {
   font-size: 12px;
+  margin-top: 0.5vw;
 }
