--- a/frontend/src/screens/RankingDetail.css
+++ b/frontend/src/screens/RankingDetail.css
@@ -1,7 +1,7 @@
 #rankingdetail {
   width: 100vw;
   /* height: 280vh; */
-  background-color: aliceblue;
+  /* background-color: aliceblue; */
   position: relative;
   /* overflow: hidden; */
 }
@@ -12,23 +12,25 @@
 
 .ranking-header {
   width: 100%;
-  position: sticky;
+  position: fixed;
+  background-color: white;
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 11;
 }
 
 .header__circle-in {
   border-radius: 50%;
   background-color: white;
-  width: 10vw;
-  height: 10vw;
+  width: 8vw;
+  height: 8vw;
   position: relative;
   cursor: pointer;
   transition: all 0.5s ease;
   border: 4px solid #ffa07a;
   position: relative;
-  margin-top: -5vw;
+  margin-top: 1vw;
   margin-right: 5vw;
 }
 
@@ -40,7 +42,7 @@
 }
 
 .img-wrapper > img {
-  width: 20vw;
+  width: 10vw;
 }
 
 .info-menu {
@@ -61,6 +63,7 @@
   width: 80%;
   /* height: 100%; */
   margin: auto;
+  margin-top: 16vw;
 }
 
 .rankingdetail-body p {
