--- a/frontend/src/screens/analysis/TabMenu.css
+++ b/frontend/src/screens/analysis/TabMenu.css
@@ -3,6 +3,16 @@
   margin-top: 10px;
 }
 
+.findplace_tab_page {
+  width: 100%;
+  height: 100%;
+}
+
+.bookmark_tab_page {
+  width: 100%;
+  height: 100%;
+}
+
 .nav.nav-tabs .nav-link {
   color: black;
   background-color: #FFF6EC;
@@ -22,7 +32,7 @@
 
 .tab-content {
   width: 92%;
-  height: 70%;
+  height: 100%;
   background-color: #FFEAD2;
   border-radius: 0px 0px 15px 15px;
 }
