--- a/frontend/src/screens/SignIn.css
+++ b/frontend/src/screens/SignIn.css
@@ -1,34 +1,47 @@
-/* .login_background {
-  background-color: blue;
-  height: 100vw;
-  width: 100vh;
-} */
+#signin-page {
+  display: flex;
+  justify-content: center;
+}
+
+.login-banner {
+  width: 100%;
+  height: 50vh;
+  overflow: hidden;
+  display: flex;
+  position: relative;
+  opacity: 0.9;
+}
+
+.login-banner > img {
+  width: 100%;
+}
 
 .signin-div {
-  width: 450px;
-  min-width: 450px;
-  height: 600px;
-  min-height: 600px;
+  width: 500px;
+  min-width: 500px;
+  height: 650px;
+  min-height: 650px;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 10% auto auto auto;
-  font-family: 'Montserrat', sans-serif;
   flex-direction: column;
   box-shadow: 1px 2px 2px #592941;
   border: 0.1em solid #592941;
   border-radius: 0.5em;
+  background-color: white;;
+  position: absolute;
+  margin: auto;
+  top: 35%;
+  z-index: 3;
 }
 
 .signinform {
   justify-content: center;
   align-items: center;
-  background-color: #FFFFFF;
   display: flex;
   align-items: center;
   flex-direction: column;
   padding: 0 30px;
-  /* height: 100%; */
   text-align: center;
 }
 
@@ -36,7 +49,6 @@
   font-weight: bold;
   font-size: large;
   margin: 0;
-
 }
 
 .title-h1 {
@@ -48,19 +60,18 @@
 
 .title-h1:hover {
   font-size: 42px;
-
 }
 
-input {
+.signinput {
   background-color: #E8F0FE;
-  border: none;
+  border: 1px solid white;
   padding: 12px 15px;
-  margin: 8px 8px;
   width: 100%;
+  border-radius: 5px;
 }
 
 .signinButton {
-  margin: 30px 0 5px 0;
+  margin: 10% 0 5px 0;
   width: 100px;
   width: auto;
   color: black;
@@ -69,7 +80,6 @@ input {
   border: 1px solid white;
   padding: 10px 95px;
   font-size: 18px;
-  font-weight: bold;
 }
 
 .signinButton:hover {
@@ -95,37 +105,41 @@ input {
   height: 70x;
 }
 
-.gosignup {
-  font-size: 14px;
+.gosignup-p {
+  font-size: 16px;
   font-weight: 100;
   line-height: 20px;
   letter-spacing: 0.5px;
-  margin: 20px 0 0 0;
+  margin: 15% 0 0 0;
   align-self: start;
-  padding: 15px 50px;
+  padding: 15px 70px;
   width: 100%;
 }
 
 .gosignupLink:hover {
   font-size: 20px;
   font-weight: bold;
-  color: white;
   transform: translate(-50%, -50%);
   transition: all 1s ease;
 }
 
+.kakaologinbutton {
+  width: 240px;
+  height: 47px;
+  background-color: #FEE500;
+  font-size: 18px;
+  border: 1px solid white;
+  border-radius: 10px;
+}
 
-
-
-/* .kakaosignin {
+.kakaologinbutton:hover {
+  margin: 10px 0 5px 0;
+  height: 55px;
+  width: auto;
+  color: black;
   border-radius: 10px;
   border: 1px solid white;
-  background-color: yellow;
-  color: #FFFFFF;
-  font-size: 14px;
+  padding: 10px 50px;
+  font-size: 20px;
   font-weight: bold;
-  padding: 10px 45px;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  transition: transform 80ms ease-in;
-} */
+}
