--- a/frontend/src/screens/SignUp.css
+++ b/frontend/src/screens/SignUp.css
@@ -1,17 +1,38 @@
+#signup-page {
+  display: flex;
+  justify-content: center;
+}
+
+.signup-banner {
+  width: 100%;
+  height: 50vh;
+  overflow: hidden;
+  display: flex;
+  position: relative;
+  opacity: 0.8;
+}
+
+.signup-banner > img {
+  width: 100%;
+}
+
 .signupdiv {
-  width: 450px;
-  min-width: 450px;
-  height: 600px;
-  min-height: 600px;
+  width: 500px;
+  min-width: 500px;
+  height: 650px;
+  min-height: 650px;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 10% auto auto auto;
-  font-family: 'Montserrat', sans-serif;
   flex-direction: column;
   box-shadow: 1px 2px 2px #592941;
   border: 0.1em solid #592941;
   border-radius: 0.5em;
+  background-color: white;;
+  position: absolute;
+  margin: auto;
+  top: 35%;
+  z-index: 3;
 }
 
 .title-h1 {
@@ -23,7 +44,6 @@
 
 .title-h1:hover {
   font-size: 42px;
-
 }
 
 .signupform {
@@ -34,17 +54,15 @@
   align-items: center;
   flex-direction: column;
   padding: 0 30px;
-  /* height: 100%; */
   text-align: center;
 }
 
-input {
-  background-color: #eee;
-  border: none;
+.signinput {
+  background-color: #E8F0FE;
+  border: 1px solid white;
   padding: 12px 15px;
-  margin: 8px 0;
   width: 100%;
-  outline: 3px;
+  border-radius: 5px;
 }
 
 .getauthnumber {
@@ -52,12 +70,11 @@ input {
   width: 100px;
   width: auto;
   color: black;
-  background-color: rgb(205, 205, 205);
+  background-color: rgb(214, 214, 214);
   border-radius: 10px;
   border: 1px solid white;
   padding: 10px 68px;
   font-size: 18px;
-  font-weight: bold;
 }
 
 .getauthnumber:hover {
@@ -81,7 +98,6 @@ input {
   border: 1px solid white;
   padding: 10px 86px;
   font-size: 18px;
-  font-weight: bold;
 }
 
 .signupbutton:hover {
@@ -96,14 +112,14 @@ input {
   font-weight: bold;
 }
 
-.gosignin {
-  font-size: 14px;
+.gosignin-p {
+  font-size: 16px;
   font-weight: 100;
   line-height: 20px;
   letter-spacing: 0.5px;
   align-self: start;
-  margin-top: 15px;
-  padding-left: 50px;
+  margin-top: 30px;
+  padding-left: 70px;
   width: 100%;
 }
 
